[gd_scene load_steps=9 format=3 uid="uid://iwhobf0k08w0"]

[ext_resource type="Texture2D" uid="uid://wept5orkq522" path="res://Assets/PlaceholderSprites/Game Jam Placeholder Sprites/DBbackgroundconceptPLACEHOLDER.png" id="1_o14dv"]
[ext_resource type="Script" uid="uid://qik5olocp0rx" path="res://Scripts/main_menu.gd" id="1_u7lva"]
[ext_resource type="FontFile" uid="uid://dg2rks2w45mwb" path="res://Assets/Fonts/Ghost Factory.ttf" id="2_u7lva"]
[ext_resource type="FontFile" uid="uid://dxwegbkjgdcue" path="res://Assets/Fonts/Adventurer.ttf" id="3_mrfpk"]
[ext_resource type="AudioStream" uid="uid://42sy6vbj8b1t" path="res://Assets/Audio/SFX/ENV/FIRE & FOREST DAYTIME .mp3" id="5_mrfpk"]

[sub_resource type="LabelSettings" id="LabelSettings_4pqbp"]
font = ExtResource("2_u7lva")
font_size = 186

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gih0s"]
bg_color = Color(0.03137255, 0.09019608, 0.18431373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k33u3"]
bg_color = Color(0.13725491, 0.25490198, 0.37254903, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u7lva")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -50.0
offset_top = -43.0
offset_right = 1936.0
offset_bottom = 1281.0
texture = ExtResource("1_o14dv")
expand_mode = 1

[node name="NightTint" type="CanvasModulate" parent="TextureRect"]
color = Color(0.38177937, 0.461246, 0.5989667, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1924.0
offset_bottom = 1082.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameTitleLabel" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
custom_minimum_size = Vector2(1200, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "THE FALL OF
COOPER"
label_settings = SubResource("LabelSettings_4pqbp")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 173

[node name="StartButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("3_mrfpk")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_gih0s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_k33u3")
text = "START"

[node name="HowToPlayButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("3_mrfpk")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_gih0s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_k33u3")
text = "HOW TO PLAY"

[node name="QuitButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("3_mrfpk")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_gih0s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_k33u3")
text = "QUIT"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_mrfpk")
autoplay = true

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
